[gd_scene load_steps=32 format=2]

[ext_resource path="res://HomeScene/20.png" type="Texture" id=1]
[ext_resource path="res://EndScene/HomeButtonDown.png" type="Texture" id=2]
[ext_resource path="res://EndScene/HomeButtonHover.png" type="Texture" id=3]
[ext_resource path="res://EndScene/HomeButtonUp.png" type="Texture" id=4]
[ext_resource path="res://EndScene/HomeLight.png" type="Texture" id=5]
[ext_resource path="res://Player/light.png" type="Texture" id=6]
[ext_resource path="res://Level/Home.gd" type="Script" id=7]
[ext_resource path="res://Player/Idle/elf_m_idle_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://Player/Idle/elf_m_idle_anim_f1.png" type="Texture" id=9]
[ext_resource path="res://Player/Idle/elf_m_idle_anim_f0.png" type="Texture" id=10]
[ext_resource path="res://Player/Idle/elf_m_idle_anim_f2.png" type="Texture" id=11]
[ext_resource path="res://Tileset/Tilesets.tres" type="TileSet" id=12]
[ext_resource path="res://HomeScene/19.png" type="Texture" id=13]
[ext_resource path="res://HomeScene/8.png" type="Texture" id=14]
[ext_resource path="res://HomeScene/3.png" type="Texture" id=15]
[ext_resource path="res://HomeScene/5.png" type="Texture" id=16]
[ext_resource path="res://HomeScene/18.png" type="Texture" id=17]
[ext_resource path="res://HomeScene/15.png" type="Texture" id=18]
[ext_resource path="res://Water/WaterRed.tscn" type="PackedScene" id=19]
[ext_resource path="res://Audio/MusicPlayer.tscn" type="PackedScene" id=20]
[ext_resource path="res://Audio/ButtonSound.tscn" type="PackedScene" id=21]
[ext_resource path="res://HomeScene/I.png" type="Texture" id=22]
[ext_resource path="res://HomeScene/P.png" type="Texture" id=23]
[ext_resource path="res://HomeScene/Y.png" type="Texture" id=24]
[ext_resource path="res://HomeScene/E.png" type="Texture" id=25]
[ext_resource path="res://HomeScene/L.png" type="Texture" id=26]
[ext_resource path="res://HomeScene/O.png" type="Texture" id=27]
[ext_resource path="res://HomeScene/H.png" type="Texture" id=28]
[ext_resource path="res://HomeScene/N.png" type="Texture" id=29]
[ext_resource path="res://HomeScene/B.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[node name="Home" type="Node"]
script = ExtResource( 7 )

[node name="FloorTileMap" type="TileMap" parent="."]
position = Vector2( 0, 4 )
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -131076, 3, 0, -131075, 4, 0, -131074, 0, 0, -131073, 4, 0, -196608, 0, 0, -196607, 7, 0, -196606, 0, 0, -196605, 5, 0, -65542, 6, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 2, 0, -65537, 0, 0, -131072, 0, 0, -131071, 4, 0, -131070, 0, 0, -131069, 1, 0, -131068, 0, 0, -131067, 0, 0, -6, 0, 0, -5, 0, 0, -4, 4, 0, -3, 1, 0, -2, 0, 0, -1, 0, 0, -65536, 2, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 4, 0, -65531, 0, 0, 65530, 0, 0, 65531, 2, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 6, 0, 2, 0, 0, 3, 2, 0, 4, 0, 0, 5, 7, 0, 131067, 5, 0, 131068, 0, 0, 131069, 4, 0, 131070, 0, 0, 131071, 2, 0, 65536, 0, 0, 65537, 0, 0, 65538, 4, 0, 65539, 0, 0, 65540, 4, 0, 196604, 0, 0, 196605, 0, 0, 196606, 7, 0, 196607, 0, 0, 131072, 1, 0, 131073, 0, 0, 131074, 3, 0, 131075, 0, 0 )

[node name="WallTileMap" type="TileMap" parent="."]
position = Vector2( 0, 4 )
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_mask = 2
format = 1
tile_data = PoolIntArray( -262149, 39, 0, -262148, 37, 0, -262147, 37, 0, -262146, 37, 0, -262145, 37, 0, -327680, 37, 0, -327679, 37, 0, -327678, 37, 0, -327677, 37, 0, -327676, 40, 0, -196614, 34, 0, -196613, 29, 0, -196612, 13, 0, -196611, 13, 0, -196610, 13, 0, -196609, 13, 0, -262144, 13, 0, -262143, 13, 0, -262142, 13, 0, -262141, 13, 0, -262140, 28, 0, -262139, 35, 0, -131078, 10, 0, -131077, 14, 0, -196604, 12, 0, -196603, 11, 0, -65542, 42, 0, -131067, 41, 0, -6, 42, 0, -65531, 41, 0, 65530, 28, 0, 65531, 40, 0, 4, 39, 0, 5, 29, 0, 131066, 12, 0, 131067, 28, 0, 131068, 40, 0, 65539, 39, 0, 65540, 29, 0, 65541, 14, 0, 196603, 12, 0, 196604, 28, 0, 196605, 37, 0, 196606, 37, 0, 196607, 37, 0, 131072, 37, 0, 131073, 37, 0, 131074, 37, 0, 131075, 29, 0, 131076, 14, 0, 262140, 12, 0, 262141, 17, 0, 262142, 16, 0, 262143, 13, 0, 196608, 13, 0, 196609, 13, 0, 196610, 18, 0, 196611, 14, 0 )

[node name="Start" type="TextureButton" parent="."]
margin_left = -16.0
margin_top = 20.0
margin_bottom = 36.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SLetter" type="Sprite" parent="Start"]
position = Vector2( 8, 7 )
scale = Vector2( 0.800001, 0.668869 )
texture = ExtResource( 13 )

[node name="LableLight2d2" type="Light2D" parent="Start"]
visible = false
light_mask = 2
position = Vector2( 8, 8 )
scale = Vector2( 1.00974, 1 )
texture = ExtResource( 5 )
energy = 0.8

[node name="TuTorial" type="TextureButton" parent="."]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HLetter" type="Sprite" parent="TuTorial"]
position = Vector2( 8, 7 )
scale = Vector2( 0.800001, 0.668869 )
texture = ExtResource( 1 )

[node name="LableLight2d2" type="Light2D" parent="TuTorial"]
visible = false
light_mask = 2
position = Vector2( 8, 8 )
scale = Vector2( 1.00974, 1 )
texture = ExtResource( 5 )
energy = 0.8

[node name="PlayerStart" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="Light2D" type="Light2D" parent="PlayerStart"]
position = Vector2( 0, 4 )
scale = Vector2( 0.183317, 0.183317 )
texture = ExtResource( 6 )
color = Color( 0.784314, 0.784314, 0.784314, 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
light_mask = 2
color = Color( 0.380392, 0.380392, 0.380392, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1, 1 )
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="GameName" type="Node2D" parent="."]
position = Vector2( 0, -35 )
scale = Vector2( 1.12, 1.08 )

[node name="GameName1" type="Sprite" parent="GameName"]
position = Vector2( -21.4286, 1.85185 )
texture = ExtResource( 13 )

[node name="GameName2" type="Sprite" parent="GameName"]
position = Vector2( -10.7143, 1.85185 )
texture = ExtResource( 14 )

[node name="GameName3" type="Sprite" parent="GameName"]
position = Vector2( 0, 1.85185 )
texture = ExtResource( 18 )

[node name="GameName4" type="Sprite" parent="GameName"]
position = Vector2( 10.7143, 1.85185 )
texture = ExtResource( 18 )

[node name="GameName5" type="Sprite" parent="GameName"]
position = Vector2( 21.4286, 1.85185 )
texture = ExtResource( 1 )

[node name="GameName6" type="Sprite" parent="GameName"]
position = Vector2( -32.1429, 13.8889 )
texture = ExtResource( 15 )

[node name="GameName7" type="Sprite" parent="GameName"]
position = Vector2( -21.4286, 13.8889 )
texture = ExtResource( 14 )

[node name="GameName8" type="Sprite" parent="GameName"]
position = Vector2( -10.7143, 13.8889 )
texture = ExtResource( 16 )

[node name="GameName9" type="Sprite" parent="GameName"]
position = Vector2( 0, 13.8889 )
texture = ExtResource( 13 )

[node name="GameName10" type="Sprite" parent="GameName"]
position = Vector2( 10.7143, 13.8889 )
texture = ExtResource( 1 )

[node name="GameName11" type="Sprite" parent="GameName"]
position = Vector2( 21.4286, 13.8889 )
texture = ExtResource( 16 )

[node name="GameName12" type="Sprite" parent="GameName"]
position = Vector2( 32.1429, 13.8889 )
texture = ExtResource( 17 )

[node name="WaterRed" parent="." instance=ExtResource( 19 )]
position = Vector2( -40, -52 )

[node name="WaterRed2" parent="." instance=ExtResource( 19 )]
position = Vector2( 40, -52 )

[node name="MusicPlayer" parent="." instance=ExtResource( 20 )]

[node name="ButtonSound" parent="." instance=ExtResource( 21 )]

[node name="PeonyPhile" type="Node2D" parent="."]
position = Vector2( 4, 27 )
scale = Vector2( 0.45, 0.4 )
__meta__ = {
"_edit_group_": true
}

[node name="by1" type="Sprite" parent="PeonyPhile"]
position = Vector2( -42, 42 )
texture = ExtResource( 30 )

[node name="by2" type="Sprite" parent="PeonyPhile"]
position = Vector2( -36, 42 )
texture = ExtResource( 24 )

[node name="P" type="Sprite" parent="PeonyPhile"]
position = Vector2( -27, 42 )
texture = ExtResource( 23 )

[node name="E" type="Sprite" parent="PeonyPhile"]
position = Vector2( -21, 42 )
texture = ExtResource( 25 )

[node name="O" type="Sprite" parent="PeonyPhile"]
position = Vector2( -15, 42 )
texture = ExtResource( 27 )

[node name="N" type="Sprite" parent="PeonyPhile"]
position = Vector2( -9, 42 )
texture = ExtResource( 29 )

[node name="Y" type="Sprite" parent="PeonyPhile"]
position = Vector2( -3, 42 )
texture = ExtResource( 24 )

[node name="P2" type="Sprite" parent="PeonyPhile"]
position = Vector2( 3, 42 )
texture = ExtResource( 23 )

[node name="H" type="Sprite" parent="PeonyPhile"]
position = Vector2( 9, 42 )
texture = ExtResource( 28 )

[node name="I" type="Sprite" parent="PeonyPhile"]
position = Vector2( 15, 42 )
texture = ExtResource( 22 )

[node name="L" type="Sprite" parent="PeonyPhile"]
position = Vector2( 21, 42 )
texture = ExtResource( 26 )

[node name="E2" type="Sprite" parent="PeonyPhile"]
position = Vector2( 27, 42 )
texture = ExtResource( 25 )

[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="button_down" from="TuTorial" to="." method="_on_TuTorial_button_down"]
[connection signal="pressed" from="TuTorial" to="." method="_on_TuTorial_pressed"]
